stylesheet.css
* {
  margin: 0;
  padding: 0;
}
.clickable {
  cursor: pointer;
  cursor: hand;
}
img {
  margin-bottom: 10px;
}
a {
  color: #000;
  text-decoration: underline;
}
a:hover {
  color: #000;
  text-decoration: none;
}
body {
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  display: none;
  text-rendering: optimizeLegibility;
  font-smooth: always;
  font-smoothing: antialiased;
  -moz-font-smoothing: antialiased;
  -webkit-font-smoothing: antialiased;
  -webkit-font-smoothing: subpixel-antialiased;
}
.appstore_button {
  width: 120px;
}
#oldies {
  width: 100%;
  margin: 50px 0 50px 0;
}
img.oldie {
  display: inline;
  width: 49%;
  padding-bottom: 1%;
  margin: 0;
}

#header {
  border-bottom: solid 1px #f0f0f0;
  position: fixed;
  width: 100%;
  top:0;
  background-color: #fff;
  z-index:3;
  height: 90px;
}
#logo {
  display: inline-block;
  margin: 15px;
  width: 85px;
  height: 59px;
  position: relative;
  top: 2px;
  left: 2px;
  background-color: #000;
  transition:         all 0.2s ease;
  -webkit-transition: all 0.2s ease;
  -moz-transition:    all 0.2s ease;
  -ms-transition:     all 0.2s ease;
  -o-transition:      all 0.2s ease;
}
#logo img {
  transition:         all 0.2s ease;
  -webkit-transition: all 0.2s ease;
  -moz-transition:    all 0.2s ease;
  -ms-transition:     all 0.2s ease;
  -o-transition:      all 0.2s ease;
  width: 88px;
  height: 62px;
  margin-left: -2px;
  margin-top: -2px;
}
#content {
  padding: 148px 30px 75px 30px;
}
#description p{
  color: #000;
  font-size: 24px;
  line-height: 36px;
  margin: 0 0 20px 0;
}
#description p.home_description {
  color: #000;
  margin-bottom: 0px;
  font-weight: 600;
}
#description p.home_biline {
  font-size: 20px;
  color: #777;
  line-height: 20px;
}

#description p.small {
  font-size: 19px;
  line-height: 30px;
  color: #777;
}
#description p.subheader {
  font-size: 16px;
  margin-bottom: 0;
}
#description p.work_tags {
  display: inline;
  margin-right: 5px;
  background-color: #eee;
  padding: 5px 15px 7px;
  border-radius: 20px;
  color: #666;
  font-size: 15px;
  margin-bottom: 10px;
  line-height: 42px;
}
p.small {
  font-size: 18px;
  line-height: 26px;
  margin-bottom: 20px;
  color: #777;
}
.work_description {
  line-height: 26px;
}
.logo_header {
  width: 110px;
}
.experiences_small {
  width: 150px;
}
img.just_logo_r {
  float: right;
  width: 50%;
}
img.just_logo_l {
  float: left;
  width: 50%;
}
p.work_tags {
  font-size: 13px;
  margin: 0;
  display: inline;
  margin-right: 5px;
  background-color: #eee;
  padding: 5px 15px 6px;
  border-radius: 20px;
  color: #666;
  line-height: 40px;
  white-space: nowrap;
}
p.small_subheader {
  font-size: 12px;
  margin-bottom: 20px;
  text-transform: uppercase;
  letter-spacing: 2px;
}
p.subheader {
  font-weight: 600;
  margin-bottom: 50px;
  font-size: 16px;
}
p.subheader_b{
  font-weight: 600;
  margin-bottom:5px;
  margin-top: 20px;
  font-size: 16px;
}
#description a{
  text-decoration: none;
  color: #000;
  text-shadow: 0 0 0 #000;
}
#description a:hover{
  color: #000;
}
#description p.small a{
  text-decoration: underline;
  text-shadow: none;
}
#description p.small a:hover{
  text-decoration: none;
}
#nav_icon_on {
  float: right;
  width: 47px;
  height: 50px;
  position: relative;
  margin: 20px 20px 0 0;
  background-color: #000;
}
#nav_icon_on img{
  width: 55px;
  height: 55px;
  margin-left: -7px;
  margin-top: -4px;
}
#nav_icon_off {
  float: right;
  width: 47px;
  height: 50px;
  position: relative;
  margin: 20px 20px 0 0;
  background-color: #000;
}
#nav_icon_off img{
  width: 55px;
  height: 55px;
  margin-left: -7px;
  margin-top: -4px;
}
#mobile_nav {
  display: none;
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  background-color: #FFF;
}
#regular_nav {
  display:none;
  text-decoration: none;
}
#mobile_nav ul {
  padding: 30px 75px 25px 30px;
  list-style: none;
}
#mobile_nav a{
  text-decoration: none;
  font-size: 22px;
  display: block;
  margin: 0 0 20px 0;
}
.work_image {
  width: 100%;
}
.work {
  margin: 0px 0 75px 0;
}
.brand_info {
  margin-bottom: 50px;
}
#logos_content .work {
  margin-bottom: 0;
}
.image_sets {
  margin:40px 0 0px 0;
}
.brand_image {
  margin: 5px 0;
}
.wide_logo {
  width: 275px;
}
#pv_video {
  margin-top: 50px;
  padding: 0 50px;
}
p.work_title {
  font-size: 19px;
  margin: 10px 0 0 0;
}
p.work_description {
  margin: 0 0 15px 0;
  font-size: 16px;
  line-height: 26px;
  color: #777;
}
p.button {
  display: inline;
  text-shadow: 0 0 0 #000;
  border: solid 1px #000;
  border-radius: 20px;
  font-size: 14px;
  padding: 8px 20px;
  line-height: 0;
  text-decoration: none;
}
a.button:hover {
  border-color: #000;
}
img.illustration {
  margin-bottom: 15px;
}
footer {
  text-align: center;
  color: #777;
  padding: 75px 0;
  clear: left;
}
#just_logos {
  margin-top: 75px;
}
p#footer_header {
  font-size: 22px;
  margin: 40px 0 15px 0;
  color: #000;
}
p#footer_description {
  font-size: 20px;
  margin: 0 0 5px 0;
}
p#footer_number {
  font-size: 30px;
  margin: 0 0 10px 0;
  color: #000;
}
ul.footer_links {
  list-style: none;
}
p#footer_email a {
  font-size: 16px;
  color: #777;
  display: inline-block;
  margin: 0 0 40px 0;
  color: #000;
  text-decoration: none;
}
p#footer_email a:hover {
  text-decoration: underline;
}
img#instagram, img#twitter {
  width: 55px;
  display: inline;
  margin-right: 5px;
}
img:hover#instagram,img:hover#twitter {
  opacity: .8;
}
p#copywrite {
  color: #777;
  font-size: 12px;
}
.portrait {
  margin-bottom: 30px;
}
.people {
  margin-bottom: 5px;
}

div.client_list {
  float: none;
  margin-right: 50px;
  width: 100%;
}
#about_header {
  margin-bottom: 50px;
}

#about_content p.sub_bio {
  font-size: 16px;
  line-height: 26px;
  color: #777777;
  z-index: 1;
}
p.clients_description_sub {
  margin-bottom: 20px;
  font-size: 13px;
  color: #777777;
  max-width: 280px;
}
p.clients_description {
  margin-bottom: 15px;
  font-weight: 600;
}
p.education_description {
  margin-bottom: 10px;
  font-weight: 600;
}
img.about_logos{
  height: 40px;
  float: left;
  margin-right: 35px;
  margin-bottom: 20px;
}
#education {
  margin-bottom: 50px;
  clear:left;
}
#education p.school {
  font-weight: 600;
  font-size: 13px;
  color: #999999;
}
#education p.major {
  font-weight: 300;
  font-size: 13px;
  color: #777777;
  padding-bottom: 10px;
}
div.press_logos {
  margin-top: 130px;
}
p.press_description{
    clear: left;
    margin-bottom: 10px;
    font-weight: 600;
    margin-bottom: 25px;
}
#illustrations_content, #print_content{
  margin-top: 10px;
}
#digital_products_content {
  margin-top: 10px;
}
#pdf_icon {
  width: 22px;
  position: relative;
  top: 15px;
  right: 8px;
}


/* Tablet Styles */
@media all and (min-width: 768px){
  img#tiny_logo{
    margin: 20px 0 5px;
  }
  #logo {
    margin: 25px 0 15px 25px;
    top:0;
    position: fixed;
    z-index:2;
  }
  .image_sets {
    margin: 50px 0 50px 0;
  }
  .brand_info {
    margin-bottom: 50px;
  }
  .work {
    margin: 0px 0 75px 0;
  }
  .brand_image {
    margin: 5px 0;
  }
  #header {
    background-color: transparent;
    border:none;
    height: 50px;
  }
  #regular_nav {
    position: fixed;
    margin: 110px 0 0px 28px;
    padding: 0 0 5px 0;
    display: block;
    font-size: 18px;
    text-align: left;
    padding-top: 0;
  }
  #regular_nav a {
    padding: 0 20px 0 0;
    text-decoration: none;
  }
  #regular_nav li {
    display: block;
    margin-bottom: 5px;
  }
  #nav_icon_on {
    display: none;
  }
  .active_page {
    text-decoration:underline;
  }
  #content {
    max-width: 725px;
    padding: 84px 30px 0 0;
    margin: 20px 0 0 150px;
  }
  footer {
    text-align: right;
    padding: 50px 30px 50px 30px;
  }
}


/* Desktop Styles */
@media all and (min-width: 1090px){

  div.client_list {
    float: left;
    margin-right: 50px;
    width: 50%;
  }
  #education {
    clear: none;
  }
  .image_sets_no_margins {
    margin:10px 0 0px 0;
  }
  #regular_nav a:hover{
    text-decoration: underline;
    display: block;
  }
  #regular_nav {
    display: block;
  }
  #content {
    margin: 20px auto;
  }

  #header {
    height: 0;
  }
  .work {
    margin: 0px 0 75px 0;
  }
  .brand_info {
    margin-bottom: 50px;
  }
  .brand_image {
    margin: 5px 0;
  }
}

